--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Chinazam Chijioke</h1>
+<h1 style="background-color:DodgerBlue;">Chinazam Chijioke</h1>
   <h2>Freshman computer science student at virginia state university</h2>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
